--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,12 @@
         
         <%= render "shared/application_nav" %>
       
-        <%= login_helper %>
-      
         <%= yield %>
-    
+      
+        <%= render "shared/application_footer" %>
+      
         <%= source_helper("application") %>
     
-        <%= copyright_generator %>
      </div>
     </div>
   </div>
