--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,20 @@
-<h1>Pages#contact</h1>
+<h1>Would you like to work together?</h1>
 
+<hr>
+
+<div class="row">
+  <div class="col-md-6"
+    <h3>Office Address</h3>
+    
+    <p>7812 Silver Mallard Ave, Las Vegas, NV, 89131</p>
+    
+    <h3>Phone Number</h3>
+    
+    <p>702-821-6441</p>
+    
+    <h3>Email</h3>
+    
+    <p>Email</p>
+</div>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3215.6578129603085!2d-115.2656263736476!3d36.296351881973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c8ecbca3d0930b%3A0x8f29e865980835b8!2s7812+Silver+Mallard+Ave%2C+Las+Vegas%2C+NV+89131!5e0!3m2!1sen!2sus!4v1491423575517" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
