--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -7,7 +7,12 @@
     <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
   </nav>
 
-</div><!-- /.blog-main -->
+</div>
 
 
+<p id="notice"><%= notice %></p>
 
+
+<br>
+
+<%= link_to "New Blog", new_blog_path if logged_in?(:site_admin) %>
