Implemented initial design for portfolio index page

--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -7,9 +7,9 @@
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
     <ol class="list-unstyled social-links">
-      <li><a href="#"><%= fa_icon "github-square" %></a></li>
-      <li><a href="#"><%= fa_icon "twitter-square" %></a></li>
-      <li><a href="#"><%= fa_icon "facebook-square" %></a></li>
+      <li><a href="https://github.com/ddanej"><%= fa_icon "github-square" %></a></li>
+      <li><a href="https://twitter.com/DakotaDj"><%= fa_icon "twitter-square" %></a></li>
+      <li><a href="https://www.facebook.com/dakota.jennings.357"><%= fa_icon "facebook-square" %></a></li>
     </ol>
   </div>
 </div>
