--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -59,10 +59,8 @@ footer p {
   margin-bottom: .25rem;
 }
 
-/*
- * Custom styles
- */
- 
+/* Custom styles */
+
 .portfolio-form {
   padding: 20px;
 }
