--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About Me</h1>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag "profile.jpg", width: 300, alt: "profile image" %>
+  </div>
+  
+  <div class="col-md-8">
+    <p> Here's some Info about myself that I need to figure out.</p>
+    
+    <p>Here's some more info about myself that is still missing.</p>
+  </div>
+</div>
+
