--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -17,6 +17,8 @@
     <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
 
     <%= yield %>
+    
+    <%= alerts %>
 
     <%= render 'shared/portfolio_footer' %>
 
